# yolo-obs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint-check.yml
src/: example_cfg.ini  main.py  simpleLogger.py
