[project]
name = "yolo-obs"
version = "0.1.0"
description = "A simple Python program that allows the integration of YOLO object detection with OBS"
authors = [
    {name = "ChiefBacon",email = "tandcclarkkids@gmail.com"}
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "obs-websocket-py (>=1.0,<2.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "ultralytics (>=8.3.127,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]